--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4.1.4"
   }
 }
