--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "json-server --watch data/db.json --port 3000"
   },
   "author": "",
   "license": "ISC",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
     "json-server": "^1.0.0-beta.3",
+    "node-fetch": "^3.3.2",
     "tailwindcss": "^4.1.4"
   }
 }
